Fix broken toolchain installs, add Find panel scopes, jdtls + Go catalog entries (v1.3.5) (#21)
Toolchain install fixes (user report: Kotlin LSP and others 'unable to install').
Root cause class: post-install verify commands that launch servers with flags
they don't support — the install succeeds but verify fails/hangs, so the app
reports the install as failed:
- kotlin-language-server: no --version flag (JCommander throws) -> check the
  installed launcher + JVM instead
- pyright: pyright-langserver rejects --version -> verify via the pyright CLI
- vscode html/css/json language servers: no --version (HTML one hangs the full
  120s verify timeout) -> presence + node check
- lldb-dap: LLVM 18 ignores --version and blocks in its DAP stdin loop ->
  presence check; symlink + adapter fallbacks generalized past the -18 suffix

Toolchains that could never install:
- gopls: no Go toolchain existed in the catalog — new 'go' SDK entry (latest
  stable tarball into /usr/local/go) + requiredSdks=[go] + /usr/local/bin
  symlink (GOPATH/bin is never on the catalog exec PATH)
- rust-analyzer: rustup lives in ~/.cargo/bin, not on the catalog exec PATH ->
  invoke by absolute path and symlink the component binary into /usr/local/bin
- netcoredbg / js-debug / java-debug: downloaded via wget, which the minimal
  rootfs lacks and no required SDK installs -> curl (guaranteed by the chains)
- postgresql: the server cannot run under the proot runtime (pg_ctlcluster
  fails, createdb connected as role 'root') -> reshaped to a client-only entry
  (psql), which is what the Postgres Client extension actually needs
- redis / mariadb: verify required a live daemon that cannot survive the
  install exec (proot --kill-on-exit, no systemd) -> presence-based verifies
- nodejs: curl bootstrap ran apt-get install without apt-get update, breaking
  fresh rootfs installs when the best-effort onboarding update failed
- android-sdk: 'pkill -f sdkmanager' matched the install script's own argv on
  the qu