@@ -55,7 +55,7 @@ object LspServerCatalog {
             verifyCommand = "clangd --version",
             uninstallCommand = "sudo apt-get remove -y clangd",
             runCommand = "clangd --background-index",
-            updateCheckCommand = "apt list --upgradable 2>/dev/null | grep -q '^clangd/'",
+            updateCheckCommand = "apt list --upgradable 2>/dev/null | grep -qE '^clangd(-[0-9]+)?/'",
             languageIds = listOf("c", "cpp"),
             extensions = listOf(".c", ".h", ".cpp", ".hpp", ".cc", ".cxx"),
             rootDetectors = listOf(".git", "compile_commands.json", "CMakeLists.txt"),
@@ -65,7 +65,11 @@ object LspServerCatalog {
             category = "Web",
             name = "TypeScript / JavaScript",
             description = "Language server for TypeScript and JavaScript (needs Node.js).",
-            installCommand = "sudo npm install -g typescript typescript-language-server",
+            // Pin typescript to the 5.x line: npm's `typescript` latest is now the 7.x Go rewrite,
+            // which no longer ships lib/tsserver.js — typescript-language-server can't drive it and
+            // fails to start for any project without a local typescript<=6. updateCheck below stays
+            // scoped to the LSP only, so this pin isn't auto-bumped to 7.
+            installCommand = "sudo npm install -g typescript@5 typescript-language-server",
             verifyCommand = "typescript-language-server --version",
             uninstallCommand = "sudo npm rm -g typescript typescript-language-server",
             runCommand = "typescript-language-server --stdio",
@@ -100,7 +104,9 @@ object LspServerCatalog {
             name = "Pyright (Python)",
             description = "Static type checker and language server for Python (needs Node.js).",
             installCommand = "sudo npm install -g pyright",
-            verifyCommand = "pyright-langserver --version",
+            // pyright-langserver itself rejects --version ("Connection input stream is not set",
+            // exit 1) — only the pyright CLI answers it, so verify through that.
+            verifyCommand = "pyright --version",
             uninstallCommand = "sudo npm rm -g pyright",
             runCommand = "pyright-langserver --stdio",
             updateCheckCommand = "test -n \"\$(npm outdated -g --parseable pyright 2>/dev/null)\"",
@@ -114,22 +120,31 @@ object LspServerCatalog {
             category = "Systems",
             name = "gopls (Go)",
             description = "Official Go language server (needs the Go toolchain).",
-            installCommand = "go install golang.org/x/tools/gopls@latest",
+            // `go install` drops the binary into $GOPATH/bin, which is never on the fixed catalog
+            // PATH — the /usr/local/bin symlink is what makes verify and the runtime launcher find it.
+            installCommand = "set -e; go install golang.org/x/tools/gopls@latest; " +
+                "sudo ln -sf \"\$(go env GOPATH)/bin/gopls\" /usr/local/bin/gopls",
             verifyCommand = "gopls version",
-            uninstallCommand = "rm -f \"\$(go env GOPATH 2>/dev/null || echo \"\$HOME/go\")/bin/gopls\"",
+            uninstallCommand = "sudo rm -f /usr/local/bin/gopls; " +
+                "rm -f \"\$(go env GOPATH 2>/dev/null || echo \"\$HOME/go\")/bin/gopls\"",
             runCommand = "gopls",
             languageIds = listOf("go"),
             extensions = listOf(".go"),
             rootDetectors = listOf("go.mod", ".git"),
+            requiredSdks = listOf("go"),
         ),
         LspCatalogEntry(
             id = "rust-analyzer",
             category = "Systems",
             name = "rust-analyzer (Rust)",
             description = "Language server for Rust (needs rustup).",
-            installCommand = "rustup component add rust-analyzer",
+            // rustup lives in ~/.cargo/bin, which is never on the fixed catalog PATH; the component's
+            // real binary gets symlinked into /usr/local/bin so verify and the runtime launcher work.
+            installCommand = "set -e; \"\$HOME/.cargo/bin/rustup\" component add rust-analyzer; " +
+                "sudo ln -sf \"\$(\"\$HOME/.cargo/bin/rustup\" which rust-analyzer)\" /usr/local/bin/rust-analyzer",
             verifyCommand = "rust-analyzer --version",
-            uninstallCommand = "rustup component remove rust-analyzer",
+            uninstallCommand = "sudo rm -f /usr/local/bin/rust-analyzer; " +
+                "\"\$HOME/.cargo/bin/rustup\" component remove rust-analyzer",
             runCommand = "rust-analyzer",
             languageIds = listOf("rust"),
             extensions = listOf(".rs"),
@@ -149,7 +164,11 @@ object LspServerCatalog {
                 "sudo rm -rf /opt/kotlin-language-server; sudo unzip -q -o /tmp/kls.zip -d /opt/kotlin-language-server; " +
                 "sudo ln -sf /opt/kotlin-language-server/server/bin/kotlin-language-server /usr/local/bin/kotlin-language-server; " +
                 "rm -f /tmp/kls.zip",
-            verifyCommand = "kotlin-language-server --version",
+            // The server's arg parser knows only --tcpServerPort/--tcpClientPort/--tcpClientHost;
+            // `--version` makes it throw and exit 1, so a launch-based verify misreports a good
+            // install as failed. Check the launcher and the JVM it needs instead.
+            verifyCommand = "test -x /opt/kotlin-language-server/server/bin/kotlin-language-server && " +
+                "command -v java >/dev/null 2>&1 && echo ready",
             uninstallCommand = "sudo rm -rf /opt/kotlin-language-server /usr/local/bin/kotlin-language-server",
             runCommand = "kotlin-language-server",
             languageIds = listOf("kotlin"),
@@ -157,15 +176,40 @@ object LspServerCatalog {
             rootDetectors = listOf("build.gradle.kts", "settings.gradle.kts", ".git"),
             requiredSdks = listOf("jdk"),
         ),
+        LspCatalogEntry(
+            id = "jdtls",
+            category = "JVM",
+            name = "Java (Eclipse JDT LS)",
+            description = "Eclipse JDT language server for Java (needs a JDK). Installed from the latest Eclipse snapshot archive.",
+            // The equinox launcher writes to its -configuration area, so the runtime uses a per-user
+            // copy of config_linux instead of the root-owned /opt tree.
+            installCommand = "set -e; sudo apt-get install -y curl; " +
+                "curl -fsSL -o /tmp/jdtls.tar.gz https://download.eclipse.org/jdtls/snapshots/jdt-language-server-latest.tar.gz; " +
+                "sudo rm -rf /opt/jdtls; sudo mkdir -p /opt/jdtls; sudo tar -xzf /tmp/jdtls.tar.gz -C /opt/jdtls; rm -f /tmp/jdtls.tar.gz; " +
+                "rm -rf \"\$HOME/.jdtls\"; mkdir -p \"\$HOME/.jdtls\"; cp -r /opt/jdtls/config_linux \"\$HOME/.jdtls/config\"",
+            verifyCommand = "ls /opt/jdtls/plugins/org.eclipse.equinox.launcher_*.jar >/dev/null 2>&1 && " +
+                "command -v java >/dev/null 2>&1 && echo ready",
+            uninstallCommand = "sudo rm -rf /opt/jdtls; rm -rf \"\$HOME/.jdtls\" \"\$HOME/.jdtls-data\"",
+            runCommand = "java -Xmx512m -Declipse.application=org.eclipse.jdt.ls.core.id1 " +
+                "-Declipse.product=org.eclipse.jdt.ls.core.product -Dosgi.bundles.defaultStartLevel=4 " +
+                "--add-modules=ALL-SYSTEM --add-opens java.base/java.util=ALL-UNNAMED --add-opens java.base/java.lang=ALL-UNNAMED " +
+                "-jar \$(ls /opt/jdtls/plugins/org.eclipse.equinox.launcher_*.jar | head -1) " +
+                "-configuration \"\$HOME/.jdtls/config\" -data \"\$HOME/.jdtls-data\"",
+            languageIds = listOf("java"),
+            extensions = listOf(".java"),
+            rootDetectors = listOf("pom.xml", "build.gradle", "build.gradle.kts", ".git"),
+            requiredSdks = listOf("jdk"),
+        ),
         // vscode-langservers-extracted bundles the HTML, CSS and JSON servers in one npm package; each
-        // entry installs the same package but runs its own binary (needs Node.js).
+        // entry installs the same package but runs its own binary (needs Node.js). None of the three
+        // answers --version (the HTML one even hangs on it), so verify checks presence + a working node.
         LspCatalogEntry(
             id = "vscode-html-language-server",
             category = "Web",
             name = "HTML",
             description = "HTML language server from vscode-langservers-extracted (needs Node.js).",
             installCommand = "sudo npm install -g vscode-langservers-extracted",
-            verifyCommand = "vscode-html-language-server --version",
+            verifyCommand = "command -v vscode-html-language-server >/dev/null 2>&1 && node -e \"process.exit(0)\"",
             uninstallCommand = "sudo npm rm -g vscode-langservers-extracted",
             runCommand = "vscode-html-language-server --stdio",
             updateCheckCommand = "test -n \"\$(npm outdated -g --parseable vscode-langservers-extracted 2>/dev/null)\"",
@@ -180,7 +224,7 @@ object LspServerCatalog {
             name = "CSS / SCSS / LESS",
             description = "CSS language server from vscode-langservers-extracted (needs Node.js).",
             installCommand = "sudo npm install -g vscode-langservers-extracted",
-            verifyCommand = "vscode-css-language-server --version",
+            verifyCommand = "command -v vscode-css-language-server >/dev/null 2>&1 && node -e \"process.exit(0)\"",
             uninstallCommand = "sudo npm rm -g vscode-langservers-extracted",
             runCommand = "vscode-css-language-server --stdio",
             updateCheckCommand = "test -n \"\$(npm outdated -g --parseable vscode-langservers-extracted 2>/dev/null)\"",
@@ -195,7 +239,7 @@ object LspServerCatalog {
             name = "JSON",
             description = "JSON language server from vscode-langservers-extracted (needs Node.js).",
             installCommand = "sudo npm install -g vscode-langservers-extracted",
-            verifyCommand = "vscode-json-language-server --version",
+            verifyCommand = "command -v vscode-json-language-server >/dev/null 2>&1 && node -e \"process.exit(0)\"",
             uninstallCommand = "sudo npm rm -g vscode-langservers-extracted",
             runCommand = "vscode-json-language-server --stdio",
             updateCheckCommand = "test -n \"\$(npm outdated -g --parseable vscode-langservers-extracted 2>/dev/null)\"",
